--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,106 @@
-.song-cover-container {
-  width: 150px;
-  height: 150px;
-  overflow: hidden;
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
-.cover {
-  width: 150px;
-  height: 150px;
+.root {
+  background-color: #181818;
+  font-family: Montserrat;
+  min-height: 100vh;
+}
+
+.nav {
+  background-color: #282828;
+  height: 60px;
+  display: flex;
+  padding: 4px 10px;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.nav-logo {
+  width: 36px;
+  height: 36px;
+  justify-self: flex-start;
+}
+
+.search-container {
+  justify-self: center;
+  width: 50%;
+  height: 80%;
+}
+
+.search-input {
+  border: none;
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+  font-family: Montserrat;
+  background-color: #181818;
+  color: #1ed760;
+  border-bottom: 1px solid #1ed760;
+}
+
+.search-input:focus {
+  outline: none;
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-gap: 20px;
+}
+
+.song-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
+
+.song-cover-container {
+  width: 100%;
+  overflow: hidden;
+  user-select: none;
+}
+
+.song-cover {
+  width: 100%;
+  height: auto;
   transition: all ease-in-out 0.2s;
 }
 
-.cover:hover {
-  transform: scale(1.2);
-  filter: blur(0.5px) grayscale(0.5) opacity(0.3);
+.song-cover:hover {
+  transform: scale(1.05);
+  filter: grayscale(0.9) opacity(0.3);
   cursor: pointer;
+}
+
+.song-name {
+  color: white;
+  font-size: 18px;
+  text-decoration: none;
+  margin-top: 6px;
+  transition: color 0.2s;
+  cursor: pointer;
+}
+
+.song-name:hover {
+  color: #1ed760;
+}
+
+.song-artist {
+  color: #949494;
+  font-size: 14px;
+  margin-top: 2px;
+  font-weight: bold;
+}
+
+.song-player {
+  display: none;
 }
