--- a/public/style.css
+++ b/public/style.css
@@ -60,12 +60,13 @@
   margin: auto;
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(165px, 1fr));
+  grid-gap: 15px 20px;
 }
 
 .song-container {
   width: 100%;
+  max-width: 165px;
   display: flex;
   flex-direction: column;
   justify-content: left;
