--- a/src/main.css
+++ b/src/main.css
@@ -82,6 +82,9 @@
   max-width: 1200px;
   margin: auto;
   padding: 20px;
+}
+
+.home-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(165px, 1fr));
   grid-gap: 15px 20px;
@@ -181,3 +184,68 @@
   justify-content: center;
   align-items: center;
 }
+
+.playlist-container {
+  padding: 0px;
+  padding-left: 20px;
+  padding-right: 300px;
+  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(165px, 1fr));
+  grid-gap: 15px 20px;
+}
+
+.sidebar {
+  width: 280px;
+  top: 60px;
+  height: calc(100vh - 125px);
+  position: fixed;
+  background-color: #3d3d3d;
+  right: 0px;
+  padding: 10px;
+  overflow-y: scroll;
+}
+
+.sidebar::-webkit-scrollbar { 
+  display: none;
+}
+
+.sidebar .playlist-name {
+  color: white;
+  text-transform: capitalize;
+  margin-bottom: 15px;
+}
+
+.playlist-row {
+  display: flex;
+  flex-direction: row;
+  height: 45px;
+  margin: 5px 0;
+  transition: all ease-in 0.4s;
+}
+
+.playlist-row .playlist-song-info {
+  padding-left: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.playlist-row .playlist-song-info .song-name, 
+.playlist-row .playlist-song-info .song-artist {
+  font-size: 10px;
+}
+
+.playlist-row:hover {
+  background-color: #181818;
+  cursor: pointer;
+}
+.playlist-row:hover .playlist-song-cover {
+  filter: grayscale(0.9) opacity(0.6);
+}
+
+.playlist-row .playlist-song-cover {
+  height: 100%;
+  width: 40px;
+}
+
