--- a/src/main.css
+++ b/src/main.css
@@ -32,32 +32,48 @@
   color: white;
 }
 
+.nav a {
+  color: white;
+  text-decoration: none;
+}
+
+.nav .logo-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav .logo-link img {
+  margin-right: 10px;
+}
+
 .nav-logo {
   width: 36px;
   height: 36px;
   justify-self: flex-start;
 }
 
-.nav-toggle-only-liked {
+.nav-button {
   width: 25px;
   height: 25px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 10px;
+  font-size: 12px;
+  font-weight: bold;
   cursor: pointer;
 }
 
-.nav-toggle-only-liked.selected {
+.nav-button.selected {
   color: #1ed760;
 }
 
-.nav-toggle-only-liked i {
+.nav-button i {
   font-size: 20px;
 }
 
-.nav-toggle-only-liked img {
+.nav-button img {
   width: 100%
 }
 
@@ -340,3 +356,14 @@
   width: 40px;
 }
 
+.not-found {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 40px;
+  text-align: center;
+}
